ready to publish

--- a/wp-content/themes/rosasrecipes/style.css
+++ b/wp-content/themes/rosasrecipes/style.css
@@ -118,7 +118,7 @@ h1, h2, h3, h4, h5 {
 
 /* header */
 #site-header {
-    background: url(images/banner.jpg);
+    background: url(https://rosa-ammala.github.io/rosas-recipes/wp-content/themes/rosasrecipes/images/banner.jpg);
     padding: 95px 20px 50px 20px;
     text-align: center;
     position: relative;
